examples/test/testpolicy1499.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1499
  namespace: namespace480
spec:
  podSelector:
    matchLabels:
      key47: value23
      key40: value0
      key17: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value42
          key31: value17
          key22: value34
      podSelector:
        matchLabels:
          key31: value25
          key8: value35
